<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <include layout="@layout/tool_bar_layout" />

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/cdiv_logo_icon"
        android:src="@drawable/logo1"
        app:layout_constraintBottom_toTopOf="@id/textView"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:textSize="@dimen/_20ssp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/main_title_fiea_tflite_model"
        android:textColor="@color/main_color_500"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/actionBtnLyt"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <LinearLayout
        android:id="@+id/actionBtnLyt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.50"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textView">

        <Button
            android:id="@+id/buttonRegister"
            style="@style/MainOption.Button"
            android:text="@string/main_btn_title_register_face" />

        <Button
            android:id="@+id/buttonRecognition"
            style="@style/MainOption.Button"
            android:text="@string/main_btn_title_recognition_face" />

        <Button
            android:id="@+id/buttonOldReg"
            style="@style/MainOption.Button"
            android:text="@string/old_register_face" />

        <Button

            android:id="@+id/buttonSettings"
            style="@style/MainOption.Button"
            android:text="@string/main_btn_title_settings" />
    </LinearLayout>

    <include layout="@layout/footer_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>