<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white">

    <!-- Toolbar -->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?colorPrimary">

        <!-- Toolbar -->
        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:title="FIEA-TFLite / Main Menu"
            app:titleTextColor="@android:color/white"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:id="@+id/iv_logo"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_gravity="center"
        android:contentDescription="@string/cdiv_logo_icon"
        android:src="@drawable/logo1"
        app:layout_constraintBottom_toTopOf="@id/main_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar"
        app:layout_insetEdge="bottom" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/textView"
        android:textSize="@dimen/_20ssp"
        style="@style/TextAppearance.Material3.HeadlineSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/_5sdp"
        android:text="@string/main_title_fiea_tflite_model"
        android:textColor="?colorPrimary"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/main_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_logo" />

    <!-- Main Content -->
    <LinearLayout
        android:id="@+id/main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingHorizontal="6dp"
        app:layout_constraintTop_toBottomOf="@id/iv_logo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_anchorGravity="center">

        <!-- Card 1: Face Register -->
        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:id="@+id/buttonRegister"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_16sdp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="?colorPrimary"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/_54sdp"
                    android:layout_height="@dimen/_54sdp"
                    android:contentDescription="@string/cdiv_register_face_icon"
                    android:src="@drawable/face_detection"
                    android:tint="?colorOnPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:fontFamily="@font/roboto_bold"
                    android:maxHeight="@dimen/_200sdp"
                    android:text="@string/main_btn_title_register_face"
                    android:textColor="?colorOnPrimary"
                    android:textSize="@dimen/_18ssp"
                    tools:targetApi="m" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Card 2: Face Verify -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonRecognition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="?colorPrimary"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/_54sdp"
                    android:layout_height="@dimen/_54sdp"
                    android:contentDescription="@string/cdiv_verify_face_icon"
                    android:src="@drawable/face"
                    android:tint="?colorOnPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    android:textSize="@dimen/_18ssp"
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="16dp"
                    android:text="@string/main_btn_title_recognition_face"
                    android:fontFamily="@font/roboto_bold"
                    android:textColor="?colorOnPrimary" />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <!-- Card 3: Settings -->
        <com.google.android.material.card.MaterialCardView
            android:id="@+id/buttonSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginHorizontal="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            app:cardCornerRadius="12dp"
            app:cardBackgroundColor="?colorPrimary"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="16dp"
                tools:ignore="UseCompoundDrawables">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="@dimen/_54sdp"
                    android:layout_height="@dimen/_54sdp"
                    android:contentDescription="@string/cdiv_settings_icon"
                    android:src="@drawable/icon_face"
                    android:tint="?colorOnPrimary" />

                <com.google.android.material.textview.MaterialTextView
                    style="@style/TextAppearance.Material3.TitleLarge"
                    android:textSize="@dimen/_18ssp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/_12sdp"
                    android:text="@string/main_btn_title_settings"
                    android:textColor="?colorOnPrimary"
                    />
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>
    </LinearLayout>

    <include layout="@layout/footer_layout"/>



</androidx.constraintlayout.widget.ConstraintLayout>
